--- a/client/src/styles/SignUp.css
+++ b/client/src/styles/SignUp.css
@@ -3,10 +3,10 @@
   width: 400px;
   height: auto; /* Let the height be dynamic based on the content */
   background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, .5);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
   margin: auto;
   margin-top: 150px;
   padding: 40px;
@@ -35,7 +35,15 @@
   color: #000;
   font-weight: 500;
   pointer-events: none;
-  transition: .5s;
+  transition: 0.5s;
+}
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+}
+.success-message {
+  color: green;
+  margin-bottom: 10px;
 }
 
 .input-box input:focus ~ label,
@@ -64,7 +72,7 @@
 }
 
 .remember-forgot {
-  font-size: .9em;
+  font-size: 0.9em;
   color: #000;
   font-weight: 500;
   margin: -15px 0 15px;
@@ -100,7 +108,7 @@
 }
 
 .login-register {
-  font-size: .9em;
+  font-size: 0.9em;
   color: #000;
   text-align: center;
   font-weight: 500;
@@ -150,8 +158,8 @@
 
 .role-selection .role-radio-group {
   display: flex;
-  justify-content:space-around; /* Space out the radio buttons */
-  align-items:center;
+  justify-content: space-around; /* Space out the radio buttons */
+  align-items: center;
 }
 
 .role-selection input[type="radio"] {
@@ -166,4 +174,13 @@
 
 .role-selection label {
   cursor: pointer;
+}
+
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+}
+.success-message {
+  color: green;
+  margin-bottom: 10px;
 }
